renamed home.html to index.html

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             <div id="headerTitle" class="top">Melrose Boys Swimming</div>
         </header>
         <ul id="menu">
-            <li><a href="home.html" id="homePageButton" class="menuItem">Home</a></li>
+            <li><a href="index.html" id="homePageButton" class="menuItem">Home</a></li>
             <li><a href="schedule.html" id="SchedulePageButton" class="menuItem">Schedule</a></li>
             <li><a href="contact.html" id="ContactPageButton" class="menuItem selectedMenuItem">Contact</a></li>
             <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
