--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="headerTitle" class="top">Melrose Boys Swimming</div>
         </header>
         <ul id="menu">
-            <li><a href="home.html" id="homePageButton" class="menuItem selectedMenuItem">Home</a></li>
+            <li><a href="index.html" id="homePageButton" class="menuItem selectedMenuItem">Home</a></li>
             <li><a href="schedule.html" id="SchedulePageButton" class="menuItem">Schedule</a></li>
             <li><a href="contact.html" id="ContactPageButton" class="menuItem">Contact</a></li>
             <li><a href="resources.html" id="ContactPageButton" class="menuItem ">Resources</a></li>
