--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
         </header>
         
         <ul id="menu">
-            <li><a href="home.html" id="homePageButton" class="menuItem">Home</a></li>
+            <li><a href="index.html" id="homePageButton" class="menuItem">Home</a></li>
             <li><a href="schedule.html" id="SchedulePageButton" class="menuItem selectedMenuItem">Schedule</a></li>
             <li><a href="contact.html" id="ContactPageButton" class="menuItem">Contact</a></li>
             <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
