Team members and updated contacts

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             <div class="title">Contact Page</div>
             <br>
             <div class="subTitle">Captains</div>
-            <div class="backdrop">
+            <div class="backdropli infoText">
                 <ul>
                     <li>
                         Sebastian Monzon: 
@@ -39,7 +39,7 @@
                     <li>
                         Whit Whitworth: 
                         <ul>
-                            <li>E-mail: <a href="mailto:smonzon360@gmail.com">smonzon360@gmail.com</a></li>
+                            <li>E-mail: <a href="mailto:dwitworth@melroseschools.com">dwitworth@melroseschools.com</a></li>
                         </ul>
                     </li>
                     <li>
@@ -51,7 +51,7 @@
                     <li>
                         Alex Pennachio:
                         <ul>
-                            <li>E-mail: <a href="mailto:smonzon360@gmail.com">smonzon360@gmail.com</a></li>
+                            <li>E-mail: <a href="mailto:apennachio@melroseschools.com">apennachio@melroseschools.com</a></li>
                         </ul>
                     </li>
                 </ul>
