--- a/schedule.html
+++ b/schedule.html
@@ -17,49 +17,54 @@
             <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
         </ul>
         <div class="info">
-            <div class="title">Schedule Page</div>
-            <iframe src="https://calendar.google.com/calendar/b/1/embed?mode=WEEK&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23d3d3d3&amp;src=melroseschools.com_i0da8m4mqqf0tccmlbd1ajoj94%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-            <div class="subTitle">Practices</div>
-            <div class="backdrop">
-                <ul>
-                    <li>
-                        Monday, Wednesday, Friday: 3-4 PM
-                    </li>
-                    <li>
-                        Tuesday, Thursday: 8-9 PM
-                    </li>
-                </ul>
+            <div id="googleSchedule">
+                <iframe src="https://calendar.google.com/calendar/b/1/embed?mode=WEEK&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;height=700&amp;wkst=1&amp;bgcolor=%23d3d3d3&amp;src=melroseschools.com_i0da8m4mqqf0tccmlbd1ajoj94%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
-            <div class="subTitle">Meets</div>
-            <div class="backdrop">
-                <ul>
-                    <li>
-                        Wednesday December 12, Lexington:
-                        <ul>
-                            <li>
-                                Warm up -- 6:30
-                            </li>
-                            <li>
-                                Meet ----- 6:45
-                            </li>
-                        </ul>
-                    </li>
-                    <br>
-                    <li>
-                        Tuesday December 18, Burlington:
-                        <ul>
-                            <li>
-                                Bus ------ 2:45
-                            </li>
-                            <li>
-                                Warm up -- 3:30
-                            </li>
-                            <li>
-                                Meet ----- 4:00
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
+            <div class="infoText">
+                <div class="title">Schedule Page</div>
+                <br>
+                <div class="subTitle">Practices</div>
+                <div class="backdropli">
+                    <ul>
+                        <li>
+                            Monday, Wednesday, Friday: 3-4 PM
+                        </li>
+                        <li>
+                            Tuesday, Thursday: 8-9 PM
+                        </li>
+                    </ul>
+                </div>
+                <div class="subTitle">Meets</div>
+                <div class="backdropli">
+                    <ul>
+                        <li>
+                            Wednesday December 12, Lexington:
+                            <ul>
+                                <li>
+                                    Warm up -- 6:30
+                                </li>
+                                <li>
+                                    Meet ----- 6:45
+                                </li>
+                            </ul>
+                        </li>
+                        <br>
+                        <li>
+                            Tuesday December 18, Burlington:
+                            <ul>
+                                <li>
+                                    Bus ------ 2:45
+                                </li>
+                                <li>
+                                    Warm up -- 3:30
+                                </li>
+                                <li>
+                                    Meet ----- 4:00
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </body>
