--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                             Miles DelGrecco
                         </li>
                         <li>
+                            Cam White
+                        </li>
+                        <li>
                             Anderson Phan
                         </li>
                     </ul>
