--- a/contact.html
+++ b/contact.html
@@ -16,45 +16,47 @@
             <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
         </ul>
         <div class="info">
-            <div class="title">Contact Page</div>
+            <div class="title">Contact</div>
             <br>
-            <div class="subTitle">Captains</div>
-            <div class="backdropli infoText">
-                <ul>
-                    <li>
-                        Sebastian Monzon: 
-                        <ul>
-                            <li>E-mail: <a href="mailto:sebastian.monzon@melroseschools.com">sebastian.monzon@melroseschools.com</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        Eamonn Burke:
-                        <ul>
-                            <li>E-mail: <a href="mailto:eamonn.burke@melroseschools.com">eamonn.burke@melroseschools.com</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <div class="subTitle">Coaches</div>
-                <ul>
-                    <li>
-                        Whit Whitworth: 
-                        <ul>
-                            <li>E-mail: <a href="mailto:dwitworth@melroseschools.com">dwitworth@melroseschools.com</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        Vicky Brienza:
-                        <ul>
-                            <li>E-mail: <a href="mailto:smonzon360@gmail.com">smonzon360@gmail.com</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        Alex Pennachio:
-                        <ul>
-                            <li>E-mail: <a href="mailto:apennachio@melroseschools.com">apennachio@melroseschools.com</a></li>
-                        </ul>
-                    </li>
-                </ul>
+            <div id="contacts">
+                <div class="subTitle">Captains</div>
+                <div class="backdropli infoText">
+                    <ul>
+                        <li>
+                            Sebastian Monzon: 
+                            <ul>
+                                <li>E-mail: <a href="mailto:sebastian.monzon@melroseschools.com" class="textLink">sebastian.monzon@melroseschools.com</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            Eamonn Burke:
+                            <ul>
+                                <li>E-mail: <a href="mailto:eamonn.burke@melroseschools.com" class="textLink">eamonn.burke@melroseschools.com</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                    <div class="subTitle">Coaches</div>
+                    <ul>
+                        <li>
+                            Whit Whitworth: 
+                            <ul>
+                                <li>E-mail: <a href="mailto:dwitworth@melroseschools.com" class="textLink">dwitworth@melroseschools.com</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            Vicky Brienza:
+                            <ul>
+                                <li>E-mail: <a href="mailto:smonzon360@gmail.com" class="textLink">smonzon360@gmail.com</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            Alex Pennachio:
+                            <ul>
+                                <li>E-mail: <a href="mailto:apennachio@melroseschools.com" class="textLink">apennachio@melroseschools.com</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </body>
