--- a/resources.html
+++ b/resources.html
@@ -20,9 +20,9 @@
         <div class="info">
             <div class="title">Resources</div>
             <br>
-            <div><a class="resource" href="https://www.familyid.com/pages/home"><strong>Family ID</strong></a></div>
+            <a class="resource" href="https://www.familyid.com/pages/home"><strong>Family ID</strong></a>
             <br>
-            <div><a class="resource" href="https://www.amazon.com/dp/B00HAMUXI0/ref=twister_B07BMLYKMS"><strong>Team Suits</strong></a></div>
+            <a class="resource" href="https://www.amazon.com/dp/B00HAMUXI0/ref=twister_B07BMLYKMS"><strong>Team Suits</strong></a>
         </div>
     </body>
 </html>
