--- a/schedule.html
+++ b/schedule.html
@@ -21,7 +21,7 @@
                 <iframe src="https://calendar.google.com/calendar/b/1/embed?mode=WEEK&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;height=700&amp;wkst=1&amp;bgcolor=%23d3d3d3&amp;src=melroseschools.com_i0da8m4mqqf0tccmlbd1ajoj94%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
             </div>
             <div class="infoText">
-                <div class="title">Schedule Page</div>
+                <div class="title">Schedule</div>
                 <br>
                 <div class="subTitle">Practices</div>
                 <div class="backdropli">
