--- a/schedule.html
+++ b/schedule.html
@@ -23,47 +23,50 @@
             <div class="infoText">
                 <div class="title">Schedule</div>
                 <br>
-                <div class="subTitle">Practices</div>
+                <br>
+                <div class="subTitle">Practices:</div>
                 <div class="backdropli">
-                    <ul>
+                    
                         <li>
                             Monday, Wednesday, Friday: 3-4 PM
                         </li>
                         <li>
                             Tuesday, Thursday: 8-9 PM
                         </li>
-                    </ul>
+                    
                 </div>
-                <div class="subTitle">Meets</div>
-                <div class="backdropli">
-                    <ul>
-                        <li>
-                            Wednesday December 12, Lexington:
-                            <ul>
-                                <li>
-                                    Warm up -- 6:30
-                                </li>
-                                <li>
-                                    Meet ----- 6:45
-                                </li>
-                            </ul>
-                        </li>
-                        <br>
-                        <li>
-                            Tuesday December 18, Burlington:
-                            <ul>
-                                <li>
-                                    Bus ------ 2:45
-                                </li>
-                                <li>
-                                    Warm up -- 3:30
-                                </li>
-                                <li>
-                                    Meet ----- 4:00
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
+                <div id="meets">
+                    <div class="subTitle">Meets:</div>
+                    <div class="backdropli">
+                        <ul>
+                            <li>
+                                Wednesday December 12, Lexington:
+                                <ul>
+                                    <li>
+                                        Warm up -- 6:30
+                                    </li>
+                                    <li>
+                                        Meet ----- 6:45
+                                    </li>
+                                </ul>
+                            </li>
+                            <br>
+                            <li>
+                                Tuesday December 18, Burlington:
+                                <ul>
+                                    <li>
+                                        Bus ------ 2:45
+                                    </li>
+                                    <li>
+                                        Warm up -- 3:30
+                                    </li>
+                                    <li>
+                                        Meet ----- 4:00
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
