Added Top Individual Times

--- a/contact.html
+++ b/contact.html
@@ -10,15 +10,16 @@
             <div id="headerTitle" class="top">Melrose Boys Swimming</div>
         </header>
         <ul id="menu">
-            <li><a href="index.html" id="homePageButton" class="menuItem">Home</a></li>
-            <li><a href="schedule.html" id="SchedulePageButton" class="menuItem">Schedule</a></li>
-            <li><a href="contact.html" id="ContactPageButton" class="menuItem selectedMenuItem">Contact</a></li>
-            <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
+            <li><a href="index.html" class="menuItem">Home</a></li>
+            <li><a href="schedule.html" class="menuItem">Schedule</a></li>
+            <li><a href="contact.html" class="menuItem selectedMenuItem">Contact</a></li>
+            <li><a href="resources.html" class="menuItem">Resources</a></li>
+            <li><a href="times.html" class="menuItem ">Times</a></li>
         </ul>
         <div class="info">
-            <div class="title">Contact</div>
+            <div class="title backdrop2">Contact</div>
             <br>
-            <div id="contacts">
+            <div id="contacts" class="backdrop2">
                 <div class="subTitle">Captains</div>
                 <div class="backdropli infoText">
                     <ul>
@@ -40,7 +41,7 @@
                         <li>
                             Whit Whitworth: 
                             <ul>
-                                <li>E-mail: <a href="mailto:dwitworth@melroseschools.com" class="textLink">dwitworth@melroseschools.com</a></li>
+                                <li>E-mail: <a href="mailto:dwhitworth@melroseschools.com" class="textLink">dwhitworth@melroseschools.com</a></li>
                             </ul>
                         </li>
                         <li>
