--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
             <div id="headerTitle" class="top">Melrose Boys Swimming</div>
         </header>
         <ul id="menu">
-            <li><a href="index.html" id="homePageButton" class="menuItem selectedMenuItem">Home</a></li>
-            <li><a href="schedule.html" id="SchedulePageButton" class="menuItem">Schedule</a></li>
-            <li><a href="contact.html" id="ContactPageButton" class="menuItem">Contact</a></li>
-            <li><a href="resources.html" id="ContactPageButton" class="menuItem ">Resources</a></li>
+            <li><a href="index.html" class="menuItem selectedMenuItem">Home</a></li>
+            <li><a href="schedule.html" class="menuItem">Schedule</a></li>
+            <li><a href="contact.html" class="menuItem">Contact</a></li>
+            <li><a href="resources.html" class="menuItem ">Resources</a></li>
+            <li><a href="times.html" class="menuItem ">Times</a></li>
         </ul>
 
         <div class="info">
@@ -32,8 +33,8 @@
                 </div>
             </div>
             <div class="infoText">
-                <div id="welcomeMsg">
-                    <div class="title">Home</div>
+                <div id="welcomeMsg" class="backdrop2">
+                    <div class="title backdrop">Home</div>
                     <div class="backdrop">
                         Welcome to the Melrose High School boys swim team website!
                         We are always looking for new swimmers, so sign up today!
@@ -41,8 +42,8 @@
                 </div>
                 <br>
                 <br>
-                <div id="team" class="horizontal">
-                    <div class="subTitle">Team Members:</div>
+                <div id="team" class="horizontal backdrop2">
+                    <div class="subTitle backdrop">Team Members:</div>
                     <div id="stats" class="horizontal backdrop">Hover Over Member For Stats</div>
                     <div>
                         <div class="backdropli horizontal" id="teamList">
@@ -83,8 +84,8 @@
                         </div>  
                     </div>
                 </div>
-                <div id="signUp" class="horizontal">
-                    <div class="subTitle">How To Sign Up:</div>
+                <div id="signUp" class="horizontal backdrop2">
+                    <div class="subTitle backdrop">How To Sign Up:</div>
                     <div class="backdropli">
                         
                             <li>Make sure you have your most recent physical from your physician
@@ -100,8 +101,8 @@
                     </div>
                 </div>
                 <script src="main.js"></script>
-                <div class="horizontal" id="practice">
-                    <div class="subTitle">What Practice is Like:</div>
+                <div class="horizontal backdrop2" id="practice">
+                    <div class="subTitle backdrop">What Practice is Like:</div>
                     <div class="backdrop">
                         Practices are Monday Wednesday and Friday in the afternoon (3:00-4:00) and Tuesday and Thursday at night (8:00-9:00). We have a Slow lane for beginners, 
                         Intermediate for medium paced swimmers, and Fast for, well, fast swimmers.
