--- a/resources.html
+++ b/resources.html
@@ -12,13 +12,14 @@
             <div id="headerTitle" class="top">Melrose Boys Swimming</div>
         </header>
         <ul id="menu">
-            <li><a href="index.html" id="homePageButton" class="menuItem">Home</a></li>
-            <li><a href="schedule.html" id="SchedulePageButton" class="menuItem">Schedule</a></li>
-            <li><a href="contact.html" id="ContactPageButton" class="menuItem">Contact</a></li>
-            <li><a href="resources.html" id="ContactPageButton" class="menuItem selectedMenuItem">Resources</a></li>
+            <li><a href="index.html" class="menuItem">Home</a></li>
+            <li><a href="schedule.html" class="menuItem">Schedule</a></li>
+            <li><a href="contact.html" class="menuItem">Contact</a></li>
+            <li><a href="resources.html" class="menuItem selectedMenuItem">Resources</a></li>
+            <li><a href="times.html" class="menuItem ">Times</a></li>
         </ul>
         <div class="info">
-            <div class="title">Resources</div>
+            <div class="title backdrop2">Resources</div>
             <br>
             <a class="resource" href="https://www.familyid.com/pages/home"><strong>Family ID</strong></a>
             <br>
