--- a/schedule.html
+++ b/schedule.html
@@ -11,18 +11,19 @@
         </header>
         
         <ul id="menu">
-            <li><a href="index.html" id="homePageButton" class="menuItem">Home</a></li>
-            <li><a href="schedule.html" id="SchedulePageButton" class="menuItem selectedMenuItem">Schedule</a></li>
-            <li><a href="contact.html" id="ContactPageButton" class="menuItem">Contact</a></li>
-            <li><a href="resources.html" id="ContactPageButton" class="menuItem">Resources</a></li>
+            <li><a href="index.html" class="menuItem">Home</a></li>
+            <li><a href="schedule.html" class="menuItem selectedMenuItem">Schedule</a></li>
+            <li><a href="contact.html" class="menuItem">Contact</a></li>
+            <li><a href="resources.html" class="menuItem">Resources</a></li>
+            <li><a href="times.html" class="menuItem ">Times</a></li>
         </ul>
+        <div id="googleSchedule" class="backdrop2">
+            <iframe src="https://calendar.google.com/calendar/b/1/embed?mode=WEEK&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;height=700&amp;wkst=1&amp;bgcolor=%23d3d3d3&amp;src=melroseschools.com_i0da8m4mqqf0tccmlbd1ajoj94%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
         <div class="info">
-            <div id="googleSchedule">
-                <iframe src="https://calendar.google.com/calendar/b/1/embed?mode=WEEK&amp;showCalendars=0&amp;showTz=0&amp;showTitle=0&amp;height=700&amp;wkst=1&amp;bgcolor=%23d3d3d3&amp;src=melroseschools.com_i0da8m4mqqf0tccmlbd1ajoj94%40group.calendar.google.com&amp;color=%2329527A&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div class="infoText">
+            
+            <div class="infoText backdrop2">
                 <div class="title">Schedule</div>
-                <br>
                 <br>
                 <div class="subTitle">Practices:</div>
                 <div class="backdropli">
